check for data type consistency

--- a/step_2_cleaning.ipynb
+++ b/step_2_cleaning.ipynb
@@ -44,14 +44,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.100"
+                        "text/html": "Total execution time: 00:00:00.009"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 1,
+                    "execution_count": 4,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -190,7 +190,7 @@
                     }
                 }
             ],
-            "execution_count": 1
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -234,14 +234,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.050"
+                        "text/html": "Total execution time: 00:00:00.023"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 3,
+                    "execution_count": 5,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -290,17 +290,256 @@
                     }
                 }
             ],
-            "execution_count": 3
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
             "source": [
-                ""
+                "## B. Check for data type consistency"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "0b74d8a1-0b4a-44c4-964c-d957f57f86a9"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- Get the data type for each column\n",
+                "SELECT COLUMN_NAME, DATA_TYPE\n",
+                "FROM INFORMATION_SCHEMA.COLUMNS\n",
+                "WHERE TABLE_NAME = 'stock_data';"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "536b7f01-7090-4686-acfe-ebd9042bdc28",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(7 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.049"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 6,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "COLUMN_NAME"
+                                    },
+                                    {
+                                        "name": "DATA_TYPE"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "COLUMN_NAME": "company",
+                                    "DATA_TYPE": "varchar"
+                                },
+                                {
+                                    "COLUMN_NAME": "date",
+                                    "DATA_TYPE": "date"
+                                },
+                                {
+                                    "COLUMN_NAME": "close",
+                                    "DATA_TYPE": "float"
+                                },
+                                {
+                                    "COLUMN_NAME": "volume",
+                                    "DATA_TYPE": "int"
+                                },
+                                {
+                                    "COLUMN_NAME": "open",
+                                    "DATA_TYPE": "float"
+                                },
+                                {
+                                    "COLUMN_NAME": "high",
+                                    "DATA_TYPE": "float"
+                                },
+                                {
+                                    "COLUMN_NAME": "low",
+                                    "DATA_TYPE": "float"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>COLUMN_NAME</th><th>DATA_TYPE</th></tr>",
+                            "<tr><td>company</td><td>varchar</td></tr>",
+                            "<tr><td>date</td><td>date</td></tr>",
+                            "<tr><td>close</td><td>float</td></tr>",
+                            "<tr><td>volume</td><td>int</td></tr>",
+                            "<tr><td>open</td><td>float</td></tr>",
+                            "<tr><td>high</td><td>float</td></tr>",
+                            "<tr><td>low</td><td>float</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 6
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- Ensure all values in date column are in DATE format\n",
+                "SELECT *\n",
+                "FROM stock_data\n",
+                "WHERE TRY_CAST(date AS DATE) IS NULL;\n",
+                "\n",
+                "-- Looks good! "
             ],
             "metadata": {
                 "language": "sql",
-                "azdata_cell_guid": "b8576b9e-310b-4cdd-8d2f-709025ae231c"
-            }
+                "azdata_cell_guid": "c3e5872a-e7d2-48b6-9532-9faecdfe1d03"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(0 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.053"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 7,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "company"
+                                    },
+                                    {
+                                        "name": "date"
+                                    },
+                                    {
+                                        "name": "close"
+                                    },
+                                    {
+                                        "name": "volume"
+                                    },
+                                    {
+                                        "name": "open"
+                                    },
+                                    {
+                                        "name": "high"
+                                    },
+                                    {
+                                        "name": "low"
+                                    }
+                                ]
+                            },
+                            "data": []
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>company</th><th>date</th><th>close</th><th>volume</th><th>open</th><th>high</th><th>low</th></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 7
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- Ensure all values in close, open, high, low columsn are in numeric format\n",
+                "SELECT *\n",
+                "FROM stock_data\n",
+                "WHERE TRY_CAST([close] AS FLOAT) IS NULL\n",
+                "   OR TRY_CAST(volume AS FLOAT) IS NULL\n",
+                "   OR TRY_CAST([open] AS FLOAT) IS NULL\n",
+                "   OR TRY_CAST(high AS FLOAT) IS NULL\n",
+                "   OR TRY_CAST(low AS FLOAT) IS NULL;\n",
+                "\n",
+                "-- Looks good! "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "4ed2d240-5848-4c47-ba12-0697346a17a5"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(0 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.074"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 9,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "company"
+                                    },
+                                    {
+                                        "name": "date"
+                                    },
+                                    {
+                                        "name": "close"
+                                    },
+                                    {
+                                        "name": "volume"
+                                    },
+                                    {
+                                        "name": "open"
+                                    },
+                                    {
+                                        "name": "high"
+                                    },
+                                    {
+                                        "name": "low"
+                                    }
+                                ]
+                            },
+                            "data": []
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>company</th><th>date</th><th>close</th><th>volume</th><th>open</th><th>high</th><th>low</th></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 9
         }
     ]
 }
