--- a/step_2_cleaning.ipynb
+++ b/step_2_cleaning.ipynb
@@ -555,7 +555,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### i. In the close column"
+                "### i. The close column"
             ],
             "metadata": {
                 "language": "sql",
@@ -19742,6 +19742,95 @@
                 }
             ],
             "execution_count": 17
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- List the companies with close values outside the IQR\n",
+                "\n",
+                "WITH Percentiles AS (\n",
+                "    SELECT\n",
+                "        PERCENTILE_CONT(0.25) WITHIN GROUP (ORDER BY [close]) OVER () AS Q1,\n",
+                "        PERCENTILE_CONT(0.75) WITHIN GROUP (ORDER BY [close]) OVER () AS Q3\n",
+                "    FROM stock_data\n",
+                "),\n",
+                "Bounds AS (\n",
+                "    SELECT \n",
+                "        (Q3 - Q1) AS IQR,\n",
+                "        (Q1 - 1.5 * (Q3 - Q1)) AS Lower_Bound,\n",
+                "        (Q3 + 1.5 * (Q3 - Q1)) AS Upper_Bound\n",
+                "    FROM Percentiles\n",
+                ")\n",
+                "SELECT DISTINCT s.company\n",
+                "FROM stock_data s\n",
+                "CROSS JOIN Bounds\n",
+                "WHERE s.[close] < Bounds.Lower_Bound \n",
+                "   OR s.[close] > Bounds.Upper_Bound;\n",
+                "\n",
+                "-- Interesting.  Given that I believe this data to be accurate, I don't believe the values that fell outside the IQR\n",
+                "-- in the close column to be true \"outliers\" in the sense that they are in any way incorrect or inaccurate.  Instead,\n",
+                "-- the companies that experiecned these \"outliers\" likely had extreme fluctuations in their stock prices."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ae6c7ad9-16d7-4c93-9c76-b995b86108d9",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(4 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.513"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 20,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "company"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "company": "MSFT"
+                                },
+                                {
+                                    "company": "NFLX"
+                                },
+                                {
+                                    "company": "TSLA"
+                                },
+                                {
+                                    "company": "META"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>company</th></tr>",
+                            "<tr><td>MSFT</td></tr>",
+                            "<tr><td>NFLX</td></tr>",
+                            "<tr><td>TSLA</td></tr>",
+                            "<tr><td>META</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 20
         }
     ]
 }
