completed IQR calcs of above upper bound only on open column

--- a/step_1_preparation.ipynb
+++ b/step_1_preparation.ipynb
@@ -16,7 +16,17 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### For this analysis, I am using the [Stock Market: Historical Data of Top 10 Companies](https://www.kaggle.com/datasets/khushipitroda/stock-market-historical-data-of-top-10-companies) dataset from Kaggle."
+                "# Step 1: Preparation"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "0dadb0f9-1c83-4d15-aeda-21f357a710c3"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## For this analysis, I am using the [Stock Market: Historical Data of Top 10 Companies](https://www.kaggle.com/datasets/khushipitroda/stock-market-historical-data-of-top-10-companies) dataset from Kaggle."
             ],
             "metadata": {
                 "azdata_cell_guid": "fdaff1e2-73fc-4594-a999-f54fb072e627",
@@ -120,7 +130,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 8,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -242,22 +251,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>company</th><th>date</th><th>close</th><th>volume</th><th>open</th><th>high</th><th>low</th></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-17</td><td>193.99</td><td>50520160</td><td>191.9</td><td>194.32</td><td>191.81</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-14</td><td>190.69</td><td>41616240</td><td>190.23</td><td>191.18</td><td>189.63</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-13</td><td>190.54</td><td>41342340</td><td>190.5</td><td>191.19</td><td>189.78</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-12</td><td>189.77</td><td>60750250</td><td>189.68</td><td>191.7</td><td>188.47</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-11</td><td>188.08</td><td>46638120</td><td>189.16</td><td>189.3</td><td>186.6</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-10</td><td>188.61</td><td>59922160</td><td>189.26</td><td>189.99</td><td>187.04</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-07</td><td>190.68</td><td>46815000</td><td>191.41</td><td>192.67</td><td>190.24</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-06</td><td>191.81</td><td>45156010</td><td>189.84</td><td>192.02</td><td>189.2</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-05</td><td>191.33</td><td>46920260</td><td>191.57</td><td>192.98</td><td>190.62</td></tr>",
-                            "<tr><td>AAPL</td><td>2023-07-03</td><td>192.46</td><td>31346600</td><td>193.78</td><td>193.88</td><td>191.76</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>company</th><th>date</th><th>close</th><th>volume</th><th>open</th><th>high</th><th>low</th></tr><tr><td>AAPL</td><td>2023-07-17</td><td>193.99</td><td>50520160</td><td>191.9</td><td>194.32</td><td>191.81</td></tr><tr><td>AAPL</td><td>2023-07-14</td><td>190.69</td><td>41616240</td><td>190.23</td><td>191.18</td><td>189.63</td></tr><tr><td>AAPL</td><td>2023-07-13</td><td>190.54</td><td>41342340</td><td>190.5</td><td>191.19</td><td>189.78</td></tr><tr><td>AAPL</td><td>2023-07-12</td><td>189.77</td><td>60750250</td><td>189.68</td><td>191.7</td><td>188.47</td></tr><tr><td>AAPL</td><td>2023-07-11</td><td>188.08</td><td>46638120</td><td>189.16</td><td>189.3</td><td>186.6</td></tr><tr><td>AAPL</td><td>2023-07-10</td><td>188.61</td><td>59922160</td><td>189.26</td><td>189.99</td><td>187.04</td></tr><tr><td>AAPL</td><td>2023-07-07</td><td>190.68</td><td>46815000</td><td>191.41</td><td>192.67</td><td>190.24</td></tr><tr><td>AAPL</td><td>2023-07-06</td><td>191.81</td><td>45156010</td><td>189.84</td><td>192.02</td><td>189.2</td></tr><tr><td>AAPL</td><td>2023-07-05</td><td>191.33</td><td>46920260</td><td>191.57</td><td>192.98</td><td>190.62</td></tr><tr><td>AAPL</td><td>2023-07-03</td><td>192.46</td><td>31346600</td><td>193.78</td><td>193.88</td><td>191.76</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 8
@@ -368,7 +364,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -397,17 +392,12 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Name</th><th>Owner</th><th>Type</th><th>Created_datetime</th></tr>",
-                            "<tr><td>stock_data</td><td>dbo</td><td>user table</td><td>2025-02-22 00:35:27.807</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Name</th><th>Owner</th><th>Type</th><th>Created_datetime</th></tr><tr><td>stock_data</td><td>dbo</td><td>user table</td><td>2025-02-22 00:35:27.807</td></tr></table>"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -532,23 +522,12 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Column_name</th><th>Type</th><th>Computed</th><th>Length</th><th>Prec</th><th>Scale</th><th>Nullable</th><th>TrimTrailingBlanks</th><th>FixedLenNullInSource</th><th>Collation</th></tr>",
-                            "<tr><td>company</td><td>varchar</td><td>no</td><td>10</td><td>     </td><td>     </td><td>yes</td><td>no</td><td>yes</td><td>SQL_Latin1_General_CP1_CI_AS</td></tr>",
-                            "<tr><td>date</td><td>date</td><td>no</td><td>3</td><td>10   </td><td>0    </td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "<tr><td>close</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "<tr><td>volume</td><td>int</td><td>no</td><td>4</td><td>10   </td><td>0    </td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "<tr><td>open</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "<tr><td>high</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "<tr><td>low</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Column_name</th><th>Type</th><th>Computed</th><th>Length</th><th>Prec</th><th>Scale</th><th>Nullable</th><th>TrimTrailingBlanks</th><th>FixedLenNullInSource</th><th>Collation</th></tr><tr><td>company</td><td>varchar</td><td>no</td><td>10</td><td>     </td><td>     </td><td>yes</td><td>no</td><td>yes</td><td>SQL_Latin1_General_CP1_CI_AS</td></tr><tr><td>date</td><td>date</td><td>no</td><td>3</td><td>10   </td><td>0    </td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr><tr><td>close</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr><tr><td>volume</td><td>int</td><td>no</td><td>4</td><td>10   </td><td>0    </td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr><tr><td>open</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr><tr><td>high</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr><tr><td>low</td><td>float</td><td>no</td><td>8</td><td>53   </td><td>NULL</td><td>yes</td><td>(n/a)</td><td>(n/a)</td><td>NULL</td></tr></table>"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -577,17 +556,12 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Identity</th><th>Seed</th><th>Increment</th><th>Not For Replication</th></tr>",
-                            "<tr><td>No identity column defined.</td><td>NULL</td><td>NULL</td><td>NULL</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Identity</th><th>Seed</th><th>Increment</th><th>Not For Replication</th></tr><tr><td>No identity column defined.</td><td>NULL</td><td>NULL</td><td>NULL</td></tr></table>"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -604,17 +578,12 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>RowGuidCol</th></tr>",
-                            "<tr><td>No rowguidcol column defined.</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>RowGuidCol</th></tr><tr><td>No rowguidcol column defined.</td></tr></table>"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -631,13 +600,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Data_located_on_filegroup</th></tr>",
-                            "<tr><td>PRIMARY</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Data_located_on_filegroup</th></tr><tr><td>PRIMARY</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 9
@@ -674,7 +639,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 10,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -693,12 +657,9 @@
                             },
                             "data": []
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>company</th><th>date</th><th>duplicate_count</th></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>company</th><th>date</th><th>duplicate_count</th></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 10
