computed positive / negative streaks, created table and inserted computed data

--- a/step_3a_eda_pt_2.ipynb
+++ b/step_3a_eda_pt_2.ipynb
@@ -13759,7 +13759,8 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "03c5adc1-3e2d-403a-a6cd-d44778e0c9b5",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
             "outputs": [
                 {
@@ -13778,6 +13779,208 @@
                 }
             ],
             "execution_count": 47
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### iv. Pattern Detection & Streaks"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "85523a44-b3ab-46cd-a87f-d6db4cbbfe53"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- Compute the streak length for positive / negative days\n",
+                "WITH Streaks AS (\n",
+                "    SELECT company, [date],\n",
+                "           CASE \n",
+                "               WHEN [close] > LAG([close]) OVER (PARTITION BY company ORDER BY [date]) THEN 1\n",
+                "               WHEN [close] < LAG([close]) OVER (PARTITION BY company ORDER BY [date]) THEN -1\n",
+                "               ELSE 0 \n",
+                "           END AS change_flag\n",
+                "    FROM stock_data\n",
+                "),\n",
+                "StreakCounts AS (\n",
+                "    SELECT company, [date], change_flag,\n",
+                "           SUM(CASE WHEN change_flag = 1 THEN 1 ELSE 0 END) \n",
+                "           OVER (PARTITION BY company ORDER BY [date] ROWS UNBOUNDED PRECEDING) AS pos_streak,\n",
+                "           SUM(CASE WHEN change_flag = -1 THEN 1 ELSE 0 END) \n",
+                "           OVER (PARTITION BY company ORDER BY [date] ROWS UNBOUNDED PRECEDING) AS neg_streak\n",
+                "    FROM Streaks\n",
+                ")\n",
+                "SELECT company, MAX(pos_streak) AS max_pos_streak, MAX(neg_streak) AS max_neg_streak\n",
+                "FROM StreakCounts\n",
+                "GROUP BY company;"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "5daa1903-43e0-41b7-9209-f9264f914d7a",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.240"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 49,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "company"
+                                    },
+                                    {
+                                        "name": "max_pos_streak"
+                                    },
+                                    {
+                                        "name": "max_neg_streak"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "company": "AAPL",
+                                    "max_pos_streak": "1320",
+                                    "max_neg_streak": "1170"
+                                },
+                                {
+                                    "company": "AMD",
+                                    "max_pos_streak": "1264",
+                                    "max_neg_streak": "1187"
+                                },
+                                {
+                                    "company": "AMZN",
+                                    "max_pos_streak": "1327",
+                                    "max_neg_streak": "1169"
+                                },
+                                {
+                                    "company": "CSCO",
+                                    "max_pos_streak": "1292",
+                                    "max_neg_streak": "1192"
+                                },
+                                {
+                                    "company": "META",
+                                    "max_pos_streak": "1330",
+                                    "max_neg_streak": "1177"
+                                },
+                                {
+                                    "company": "MSFT",
+                                    "max_pos_streak": "1326",
+                                    "max_neg_streak": "1171"
+                                },
+                                {
+                                    "company": "NFLX",
+                                    "max_pos_streak": "1282",
+                                    "max_neg_streak": "1229"
+                                },
+                                {
+                                    "company": "QCOM",
+                                    "max_pos_streak": "1296",
+                                    "max_neg_streak": "1211"
+                                },
+                                {
+                                    "company": "SBUX",
+                                    "max_pos_streak": "1302",
+                                    "max_neg_streak": "1197"
+                                },
+                                {
+                                    "company": "TSLA",
+                                    "max_pos_streak": "1306",
+                                    "max_neg_streak": "1195"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>company</th><th>max_pos_streak</th><th>max_neg_streak</th></tr>",
+                            "<tr><td>AAPL</td><td>1320</td><td>1170</td></tr>",
+                            "<tr><td>AMD</td><td>1264</td><td>1187</td></tr>",
+                            "<tr><td>AMZN</td><td>1327</td><td>1169</td></tr>",
+                            "<tr><td>CSCO</td><td>1292</td><td>1192</td></tr>",
+                            "<tr><td>META</td><td>1330</td><td>1177</td></tr>",
+                            "<tr><td>MSFT</td><td>1326</td><td>1171</td></tr>",
+                            "<tr><td>NFLX</td><td>1282</td><td>1229</td></tr>",
+                            "<tr><td>QCOM</td><td>1296</td><td>1211</td></tr>",
+                            "<tr><td>SBUX</td><td>1302</td><td>1197</td></tr>",
+                            "<tr><td>TSLA</td><td>1306</td><td>1195</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 49
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "-- Create table for streak computations\n",
+                "CREATE TABLE stock_streaks (\n",
+                "    company VARCHAR(50),\n",
+                "    max_pos_streak INT,\n",
+                "    max_neg_streak INT\n",
+                ");\n",
+                "\n",
+                "-- Insert streak computation data\n",
+                "WITH Streaks AS (\n",
+                "    SELECT company, [date],\n",
+                "           CASE \n",
+                "               WHEN [close] > LAG([close]) OVER (PARTITION BY company ORDER BY [date]) THEN 1\n",
+                "               WHEN [close] < LAG([close]) OVER (PARTITION BY company ORDER BY [date]) THEN -1\n",
+                "               ELSE 0 \n",
+                "           END AS change_flag\n",
+                "    FROM stock_data\n",
+                "),\n",
+                "StreakCounts AS (\n",
+                "    SELECT company, [date], change_flag,\n",
+                "           SUM(CASE WHEN change_flag = 1 THEN 1 ELSE 0 END) \n",
+                "           OVER (PARTITION BY company ORDER BY [date] ROWS UNBOUNDED PRECEDING) AS pos_streak,\n",
+                "           SUM(CASE WHEN change_flag = -1 THEN 1 ELSE 0 END) \n",
+                "           OVER (PARTITION BY company ORDER BY [date] ROWS UNBOUNDED PRECEDING) AS neg_streak\n",
+                "    FROM Streaks\n",
+                ")\n",
+                "INSERT INTO stock_streaks (company, max_pos_streak, max_neg_streak)\n",
+                "SELECT company, MAX(pos_streak), MAX(neg_streak)\n",
+                "FROM StreakCounts\n",
+                "GROUP BY company;"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "0f951ce2-1d8b-4d3b-a043-667ccaaaa3cb",
+                "language": "sql",
+                "tags": []
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.149"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 50
         }
     ]
 }
